# supabase-mcp-server

./: .env.example  .env.mcp2  .env.test.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.MD  Dockerfile  README.md  codecov.yml  docker-compose.yml  main.py  pyproject.toml  servers.remote.json  smithery.yaml  supabase_mcp_tools_test_log.md
.cursor/: mcp.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  roadmap_item.md
.github/workflows/: ci.yaml  publish.yaml
doc/: aviable_services.md  remote_servers.md  self_host.md
src/: client.py  exceptions.py  logger.py  queries.py  settings.py  validators.py
supabase_mcp/: __init__.py  client.py  exceptions.py  httpstream.py  logger.py  main.py  oauth_server.py  queries.py  settings.py  startup.py  validators.py
supabase_mcp/api_manager/: api_client.py  api_manager.py  api_manager_legacy.py  api_request_manager.py  api_spec_manager.py  errors.py  spec_manager.py
supabase_mcp/api_service/: api_client.py  api_manager.py  api_manager_legacy.py  api_request_manager.py  api_spec_manager.py
supabase_mcp/clients/: api_client.py  base_http_client.py  management_client.py  sdk_client.py
supabase_mcp/core/: container.py  feature_manager.py  http_client.py  mcp_server.py  query_api_client.py
supabase_mcp/database_service/: database_client.py  migration_manager.py  (+2 more)
tests/: conftest.py  test_client.py  test_container.py  test_db_client.py  test_main.py  test_main_tools.py  test_migration_manager.py  test_settings.py  test_tool_manager.py  test_tools.py
(+94 files in other folders)
