[project]
name = "supabase-mcp-server"
version = "0.1.0"
description = "Unofficial MCP server for Supabase providing basic schema, table, and column management."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.2.1",
    "psycopg2>=2.9.10",
    "supabase>=2.13.0",
    "tenacity>=9.0.0",
]
